# freeswitch-callbot

./: Makefile.am  ProtoDescription.md  README.md  bot_answer.lua  bot_early_media.lua  bot_event.lua  bot_hangup.lua  bot_init.lua  bot_transfer.lua  call_bot_glue.cpp  call_bot_glue.h  mod_call_bot.c  mod_call_bot.h  modules.conf  simple_buffer.h  smartivrphonegateway.grpc.pb.cc  smartivrphonegateway.grpc.pb.h  smartivrphonegateway.pb.cc  smartivrphonegateway.pb.h  smartivrphonegateway.proto
scripts/: bot_answer.lua  bot_early_media.lua  bot_event.lua  bot_hangup.lua  bot_init.lua  bot_playback_stop.lua  bot_transfer.lua
xml-rpc/: .dockerignore  Dockerfile  ESL.py  client.py  client1.py  esl_call_center.py  esl_thread.py  note.txt  pbxConstant.py  server.py  server1.py  test.py
